# financial-transaction-etl

./: README.md  docker-compose.yml  main.py  pyproject.toml  start.sh
grafana/dashboards/: grafana_dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasources.yml.template
kafka/consumer/: postgres_consumer.py
kafka/producer/: transaction_producer.py
